# veiled

./: .gitignore  CMakeLists.txt  README.md  bot.cpp  bot.hpp  main.cpp  utils.hpp
src/: bot.cpp  bot.hpp  utils.cpp  utils.hpp
